crates/ars-components/src/overlay/popover/snapshots/ars_components__overlay__popover__tests__popover_arrow_with_offset_at_top_placement.snap
---
source: crates/ars-components/src/overlay/popover/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).arrow_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "arrow",
            ),
        ),
        (
            Data(
                "ars-placement",
            ),
            String(
                "top",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "popover",
            ),
        ),
    ],
    styles: [
        (
            Top,
            "-8px",
        ),
        (
            Left,
            "24px",
        ),
    ],
}
