crates/ars-components/src/overlay/popover/snapshots/ars_components__overlay__popover__tests__popover_content_open_modal_with_title.snap
---
source: crates/ars-components/src/overlay/popover/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "popover",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "open",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "popover-title",
            ),
        ),
        (
            Aria(
                Modal,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "popover-content",
            ),
        ),
        (
            Role,
            String(
                "dialog",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
